--- a/bin/views/index.erb
+++ b/bin/views/index.erb
@@ -10,10 +10,10 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <div class="container">
 <form action="/upload" method="post" enctype="multipart/form-data">
-    <div class="container">
         <div class="row">
-        
+            <h1>Cancer Guesser</h1>
             <h3>Upload Gene Expression Profile</h3>
         </div>
             <div class="row">
@@ -27,9 +27,8 @@
             <div class="row">
                   <input class="btn btn-primary" type="submit" value="Upload">
             </div>
-    </div>
-  
 </form>
+        </div>
     </body>
 </html>
 
@@ -58,6 +57,7 @@
         border-width: 5px;
         border-color: white;
     }
+        
 </style>
 
 <script "text/javascript">
