--- a/bin/views/report.erb
+++ b/bin/views/report.erb
@@ -14,6 +14,12 @@
             <h1>Results:</h1>
             <h3>Name: <%= name %></h3>
             <table class="table table-bordered result_table">
+                <thead>
+                    <tr>
+                        <th>Cancer Type</th>
+                        <th>Probability</th>
+                    </tr>
+                </thead>
                 <tbody>
                 <% results.each do |result| %>
                     <tr>
@@ -56,6 +62,12 @@
     .result_table {
         
         background-color: white;
+        
+    }
+    
+    .result_table tbody tr:hover{
+        
+        background-color: #e5e5dd;
         
     }
 </style>
